--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "codemirror": "^5.39.0"
+        "codemirror": "^5.39.0",
+        "jshint": "^2.9.5"
     }
 }
